--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -3,6 +3,9 @@
 
 body {
   padding: 0;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-bottom: 20px;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -14,6 +17,10 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
+
+h4 {
+    display: inline;
+}
 
 .btn {
   display: inline-block;
